--- a/S7L1/index2.html
+++ b/S7L1/index2.html
@@ -6,9 +6,28 @@
     <title>Secondo Esercizio S7L1</title>
 </head>
 <body>
+    <form>
+        <formfield id="petForm">
+            <label for="petName"></label>
+            <input type="text" id="petName" placeholder="Nome"/>
+            <label for="ownerName"></label>
+            <input type="text" id="ownerName" placeholder="Proprietario"/>
+            <label for="species"></label>
+            <input type="text" id="species" placeholder="Animale"/>
+            <label for="breed"></label>
+            <input type="text" id="breed" placeholder="Razza"/>
+        </formfield>
+        <button type="button" id="insert">Inserisci Pet</button>
+    </form>
+
+    <div>
+        <ul id="petList">
+        
+        </ul>
+    </div>
     
 
 
-    <script href="assets/script2.js"></script>
+    <script src="assets/script2.js"></script>
 </body>
 </html>
